2003-04-02  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/ulh.d: Adjust for ulh and ulhu macro assembly changes.

	* gas/mips/mips.exp: Define new "gpr_ilocks" architecture
	property, and add it to mips2 (and later) chips and r3900.
	* gas/mips/uld2.s: New test source file.
	* gas/mips/ulh2.s: Likewise.
	* gas/mips/ulw2.s: Likewise.
	* gas/mips/uld2.l: New test stderr listing.
	* gas/mips/ulh2.l: Likewise.
	* gas/mips/ulw2.l: Likewise.
	* gas/mips/uld2-eb.d: New test.
	* gas/mips/uld2-el.d: Likewise.
	* gas/mips/ulh2-eb.d: Likewise.
	* gas/mips/ulh2-el.d: Likewise.
	* gas/mips/ulw2-eb-ilocks.d: Likewise.
	* gas/mips/ulw2-eb.d: Likewise.
	* gas/mips/ulw2-el-ilocks.d: Likewise.
	* gas/mips/ulw2-el.d: Likewise.
	* gas/mips/mips.exp: Run new tests for appropriate architectures.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

        * gas/xtensa/all.exp: New file.
        * gas/xtensa/entry_align.s: Likewise.
        * gas/xtensa/entry_misalign2.s: Likewise.
        * gas/xtensa/entry_misalign.s: Likewise.
        * gas/xtensa/j_too_far.s: Likewise.
        * gas/xtensa/loop_align.s: Likewise.
        * gas/xtensa/loop_misalign.s: Likewise.

2003-03-25  Stan Cox   <scox@redhat.com>
	    Nick Clifton  <nickc@redhat.com>
	    
	Contribute support for Intel's iWMMXt chip - an	ARM variant:

	* gas/arm/arm.exp: Run iwmmxt test.
	* gas/arm/iwmmxt.s: New test source file.
	* gas/arm/iwmmxt.d: New test expected results file.
	* gas/elf/elf.exp: Fix section2 test to cope with note section.
	* gas/eld/section2.e-miwxxmt: New test expected results file.

2003-03-12  Alexandre Oliva  <aoliva@redhat.com>

	* gas/mips/branch-misc-2.s: Add branch to symbol in another
	section.
	* gas/mips/branch-misc-2.l: Update error messages and warnings.

2003-03-12  Alexandre Oliva  <aoliva@redhat.com>

	* Reverted previous patch.

2003-03-02  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/bge.d: Reactivate external branch tests.
	* gas/mips/bge.s: Likewise.