@@ -67,6 +67,8 @@ if {[istarget *arm*-*-*] || [istarget "xscale-*-*"]} then {
     if {[istarget *-*-elf*] || [istarget *-*-linux*]} then {
 	run_dump_test "pic"
     }
+
+    gas_test "offset.s" "" $stdoptlist "OFFSET_IMM regression"
 }
 
 # Not all arm targets are bi-endian, so only run this test on ones
