@@ -1,3 +1,8 @@
+2003-04-03  Philip Blundell  <philb@gnu.org>
+
+	* gas/arm/offset.s: New test.
+	* gas/arm/arm.exp (run_errors_test): Run it.
+
 2003-04-02  Chris Demetriou  <cgd@broadcom.com>
 
 	* gas/mips/ulh.d: Adjust for ulh and ulhu macro assembly changes.
